--- a/WEB/index.html
+++ b/WEB/index.html
@@ -692,14 +692,57 @@
 			<div class="game">
 				<img src="./static/8.png" alt="Mines Preview">
 				<div class="game-info">
-					<h3>COLOR</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/COLORWEB/">
+					<h3>Football X</h3>
+					<a href="https://minesguruhack.github.io/GuruHack/FX/">
 						<button>Open</button>
 					</a>
-					</div>
+				</div>
+			</div>			
+		    <div class="game">
+			<img src="./static/9.png" alt="Mines Preview">
+			<div class="game-info">
+				<h3>Balloon (spribe)</h3>
+				<a href="https://minesguruhack.github.io/GuruHack/baba/">
+					<button>Open</button>
+				   </a>
+			    </div>
+		    </div>
+		    <div class="game">
+			<img src="./static/10.png" alt="Mines Preview">
+			<div class="game-info">
+				<h3>Balloon (smartsoft)</h3>
+				<a href="https://minesguruhack.github.io/GuruHack/baye/">
+					<button>Open</button>
+				   </a>
+			    </div>
+		    </div>
+		    <div class="game">
+			<img src="./static/11.png" alt="Mines Preview">
+			<div class="game-info">
+				<h3>Chicky run</h3>
+				<a href="https://minesguruhack.github.io/GuruHack/chiru/">
+					<button>Open</button>
+				   </a>
+			    </div>
+		    </div>
+		    <div class="game">
+				<img src="./static/12.png" alt="Mines Preview">
+				<div class="game-info">
+					<h3>Hotline (spribe)</h3>
+					<a href="https://minesguruhack.github.io/GuruHack/hot/">
+						<button>Open</button>
+				    </a>
+			    </div>
+		    </div>
+		    <div class="game">
+			<img src="./static/13.png" alt="Mines Preview">
+			<div class="game-info">
+				<h3>Mine Island</h3>
+				<a href="https://minesguruhack.github.io/GuruHack/island/">
+					<button>Open</button>
+				    </a>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	<div class="tab">
@@ -1051,15 +1094,15 @@
 		function getGameName(imageNumber) {
 			switch (imageNumber) {
 				case '1':
-					return 'Mines'
+					return ' '
 				case '2':
-					return 'Royal Mines'
+					return ' '
 				case '3':
-					return 'Coin Flip'
+					return ' '
 				case '4':
-					return 'Brawl Pirates'
+					return ' '
 				case '5': // Добавляем Bombucks
-					return 'Bombucks'
+					return ' '
 				default:
 					return ''
 			}
