--- a/FX1/index.html
+++ b/FX1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <body>
-    <a href="https://minesguruhack.github.io/GuruHack/WEB1/">
+    <a href="https://guruapp25.github.io/GuruHack/WEB1/">
         <img src="static/back.png" alt="Кнопка назад" class="clickable-image">
     </a>
     <meta charset="UTF-8">
