--- a/baba/index.html
+++ b/baba/index.html
@@ -60,7 +60,7 @@
     <div class="controls">
         <div class="buttons-container">
             <button id="predictButton">Get Signal</button>
-            <a href="https://minesguruhack.github.io/GuruHack/WEB1/" id="backButton" class="button">Back</a>
+            <a href="https://guruapp25.github.io/GuruHack/WEB1/" id="backButton" class="button">Back</a>
             <a href="https://t.me/minesguruhack" id="telegramButton" class="button">
                 <img src="tg.png" alt="Telegram" class="tg-icon">
                 <span>@minesguruhack</span>
