--- a/baye/index.html
+++ b/baye/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <button class="start-button" id="startButton">Start</button>
-    <button class="start-button" onclick="window.location.href='https://minesguruhack.github.io/GuruHack/WEB1/'" style="margin-top: 20px;">Back</button>
+    <button class="start-button" onclick="window.location.href='https://guruapp25.github.io/GuruHack/WEB1/'" style="margin-top: 20px;">Back</button>
     <a href="https://t.me/+RnRU50oNRsIwNzU0" class="telegram-button" target="_blank">
       <img src="tg.png" alt="Telegram Icon" class="telegram-icon">
       @minesguruhack
