--- a/hot/index.html
+++ b/hot/index.html
@@ -31,7 +31,7 @@
         <div class="result" id="result"></div>
         <div class="button-container">
             <button class="spin-button" onclick="spin()" id="spinButton">Get Signal</button>
-            <a href="https://minesguruhack.github.io/GuruHack/WEB1/" class="back-button-link">
+            <a href="https://guruapp25.github.io/GuruHack/WEB1/" class="back-button-link">
                 <button class="back-button" id="backButton">Back</button>
             </a>
             <a href="https://t.me/minesguruhack" class="dynasty-button-link">
