--- a/island/index.html
+++ b/island/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="game-container">
-        <a href="https://minesguruhack.github.io/GuruHack/WEB1/" class="back-button" id="back-button">Back</a>
+        <a href="https://guruapp25.github.io/GuruHack/WEB1/" class="back-button" id="back-button">Back</a>
         <a href="https://t.me/minesguruhack" class="telegram-button" id="telegram-button">
             <img src="tg.png" alt="Telegram" class="telegram-icon">
             <span>@minesguruhack</span>
