--- a/mines1w/index.html
+++ b/mines1w/index.html
@@ -681,7 +681,7 @@
 	</head>
 	<body>
 
-		<a href="https://minesguruhack.github.io/GuruHack/WEB1/">
+		<a href="https://guruapp25.github.io/GuruHack/WEB1/">
 			<img src="images/back.png" alt="Кнопка назад" class="clickable-image">
 		</a>
 		<canvas id="particleCanvas"></canvas>
