--- a/spribe/index.html
+++ b/spribe/index.html
@@ -382,7 +382,7 @@
     </style>
 </head>
 <body>
-    <a href="https://minesguruhack.github.io/GuruHack/WEB1/">
+    <a href="https://guruapp25.github.io/GuruHack/WEB1/">
         <img src="static/back.png" alt="Кнопка назад" class="clickable-image">
     </a>
     <div class="winner">
