--- a/WEB/index.html
+++ b/WEB/index.html
@@ -648,7 +648,7 @@
 				<img src="./static/1.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (Spribe)</h3>
-					<a href="https://guruapp25.github.io/web/spribe/">
+					<a href="https://guruapp25.github.io/GuruHack/spribe/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -657,7 +657,7 @@
 				<img src="./static/2.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (Turbo)</h3>
-					<a href="https://guruapp25.github.io/web/turbomines/">
+					<a href="https://guruapp25.github.io/GuruHack/turbomines/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -666,7 +666,7 @@
 				<img src="./static/3.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Mines (1win)</h3>
-					<a href="https://guruapp25.github.io/web/mines1w/">
+					<a href="https://guruapp25.github.io/GuruHack/mines1w/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -675,7 +675,7 @@
 				<img src="./static/5.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Goal (Spribe)</h3>
-					<a href="https://guruapp25.github.io/web/goalspribe/">
+					<a href="https://guruapp25.github.io/GuruHack/goalspribe/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -693,7 +693,7 @@
 				<img src="./static/8.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Football X</h3>
-					<a href="https://guruapp25.github.io/web/FX/">
+					<a href="https://guruapp25.github.io/GuruHack/FX/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -702,7 +702,7 @@
 			<img src="./static/9.png" alt="Mines Preview">
 			<div class="game-info">
 				<h3>Balloon (spribe)</h3>
-				<a href="https://guruapp25.github.io/web/baba/">
+				<a href="https://guruapp25.github.io/GuruHack/baba/">
 					<button>Open</button>
 				   </a>
 			    </div>
@@ -711,7 +711,7 @@
 			<img src="./static/10.png" alt="Mines Preview">
 			<div class="game-info">
 				<h3>Balloon (smartsoft)</h3>
-				<a href="https://guruapp25.github.io/web/baye/">
+				<a href="https://guruapp25.github.io/GuruHack/baye/">
 					<button>Open</button>
 				   </a>
 			    </div>
@@ -720,7 +720,7 @@
 			<img src="./static/11.png" alt="Mines Preview">
 			<div class="game-info">
 				<h3>Chicky run</h3>
-				<a href="https://guruapp25.github.io/web/chiru/">
+				<a href="https://guruapp25.github.io/GuruHack/chiru/">
 					<button>Open</button>
 				   </a>
 			    </div>
@@ -729,7 +729,7 @@
 				<img src="./static/12.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Hotline (spribe)</h3>
-					<a href="https://guruapp25.github.io/web/hot/">
+					<a href="https://guruapp25.github.io/GuruHack/hot/">
 						<button>Open</button>
 				    </a>
 			    </div>
@@ -738,7 +738,7 @@
 			<img src="./static/13.png" alt="Mines Preview">
 			<div class="game-info">
 				<h3>Mine Island</h3>
-				<a href="https://guruapp25.github.io/web/island/">
+				<a href="https://guruapp25.github.io/GuruHack/island/">
 					<button>Open</button>
 				    </a>
 				</div>
