--- a/WEB/index.html
+++ b/WEB/index.html
@@ -733,13 +733,22 @@
 						<button>Open</button>
 				    </a>
 			    </div>
-		    </div>
-		    <div class="game">
+			</div>
+		     <div class="game">
 			<img src="./static/13.png" alt="Mines Preview">
 			<div class="game-info">
-				<h3>Mine Island</h3>
+				<h3>Mine island</h3>
 				<a href="https://guruapp25.github.io/GuruHack/island/">
 					<button>Open</button>
+				   </a>
+			    </div>
+		    </div>
+		    <div class="game">
+				<img src="./static/14.png" alt="Mines Preview">
+				<div class="game-info">
+					<h3>King thimbles</h3>
+					<a href="https://guruapp25.github.io/GuruHack/king/">
+						<button>Open</button>
 				    </a>
 				</div>
 			</div>
